The format is based on [Keep a Changelog](http://keepachangelog.com/en/1.0.0/)
and this project **does not adhere to [Semantic Versioning](http://semver.org/spec/v2.0.0.html)**.

## [Unreleased]

### Added

### Changed

### Deprecated

### Removed

### Fixed

### Security

## [20.04.2] 2020-04-15

### Added

* IS_CHROOTED_BINARY_NOT_UPTODATE: verify that chrooted processes run up-to-date binaries

## [20.04.1] 2020-04-12

### Added

* IS_EVOBACKUP_EXCLUDE_MOUNT : verify that mount points are excluded in evobackup scripts

## [20.02.1] - 2020-02-27

### Changed

* IS_EVOLINUXSUDOGROUP : improve sudoer directive detection

## [19.11.2] - 2019-11-07

### Changed

* IS_EVOMAINTENANCE_FW : warn only if HOOK_DB is enabled
* IS_BACKUPUPTODATE : check backup dates in the correct directory

## [19.11.1] - 2019-11-06

### Fixed

* IS_TMPUSRRO : improve grep for options detection
* IS_TMPNOEXEC : fix grep for options detection

## [19.11] - 2019-11-05

### Changed

* IS_TUNE2FS_M5 displays the name of the partition
* IS_MARIADBEVOLINUXCONF is disabled by default in cron mode
* IS_PHPEVOLINUXCONF is disabled by default in cron mode
* IS_OLD_HOME_DIR is disabled by default in cron mode
* IS_TMPNOEXEC : better "noexec" detection for /tmp

### Fixed

* squid: better http port detection

## [19.08] - 2019-08-30

### Changed

* better error messages for missing commands

## [19.06] - 2019-06-21

### Added

* new check: IS_OSPROBER

### Changed

* IS_DISKPERF is disabled by default
* verbose mode added for IS_APACHESYMLINK

### Fixed

* fix 5 apache checks (wrong package name was used)
* fix IS_MYSQLNRPE (wrong test on a tilde expansion variable)

## [19.04] - 2019-04-25

### Added

* IS_EVOBACKUP_INCS

### Changed

* change versioning scheme : year.month.patch
* extracts tests into functions
* add verbose and quiet modes
* add usage output on error
* add braces and quotes

## [0.13] - 2018-04-10

### Added

* New checks:
  IS_EVOLIX_USER

### Changed
